<resources>
    <string name="app_name">Cuacamu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cuacamu</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>

    <string name="kecamatan"><![CDATA[<Kecamatan>]]></string>
    <string name="day_date"><![CDATA[<day>, <date>]]></string>
    <string name="time"><![CDATA[<time>]]></string>
    <string name="kota_kabupaten"><![CDATA[<Kota/Kabupaten>]]></string>
    <string name="wind">Wind</string>
    <string name="direction">Direction</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_unit">%</string>
    <string name="speed_unit">km/h</string>
    <string name="today">Today</string>
    <string name="provinsi">Province</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">X</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="search_hint">Search Location Here</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="language">Language</string>
    <string name="appearance">Appearance</string>
    <string name="preference">Preference</string>
    <string name="dark_mode">Dark mode</string>
    <string name="choose_language">Choose language</string>
    <string name="forecast_at_1">Weather forecast at: 00.00—00.59</string>
    <string name="forecast_at_4">Weather forecast at: 01.00—03.59</string>
    <string name="forecast_at_7">Weather forecast at: 04.00—06.59</string>
    <string name="forecast_at_10">Weather forecast at: 07.00—09.59</string>
    <string name="forecast_at_13">Weather forecast at: 10.00—12.59</string>
    <string name="forecast_at_16">Weather forecast at: 13.00—15.59</string>
    <string name="forecast_at_19">Weather forecast at: 16.00—18.59</string>
    <string name="forecast_at_22">Weather forecast at: 19.00—21.59</string>
    <string name="forecast_at_23">Weather forecast at: 22.00—23.59</string>

    <string name="undefined">Undefined</string>

    <string name="bright">Bright</string>
    <string name="sunny_cloudy">Sunny Cloudy</string>
    <string name="cloudy">Cloudy</string>
    <string name="heavy_cloudy">Heavy Cloudy</string>
    <string name="blurred_air">Blurred Air</string>
    <string name="smoke">Smoke</string>
    <string name="fog">Fog</string>
    <string name="light_rain">Light Rain</string>
    <string name="medium_rain">Medium Rain</string>
    <string name="heavy_rain">Heavy Rain</string>
    <string name="local_rain">Local Rain</string>
    <string name="thunderstorm">Thunderstorm</string>

    <string name="north">North</string>
    <string name="north_north_east">North North East</string>
    <string name="north_east">North East</string>
    <string name="east_north_east">East North East</string>
    <string name="east">East</string>
    <string name="east_south_east">East South East</string>
    <string name="south_east">South East</string>
    <string name="south_south_east">South South East</string>
    <string name="south">South</string>
    <string name="south_south_west">South South West</string>
    <string name="south_west">South West</string>
    <string name="west_south_west">West South West</string>
    <string name="west">West</string>
    <string name="west_north_west">West North West</string>
    <string name="north_west">North West</string>
    <string name="north_north_west">North North West</string>



    <string name="X">X</string>
    <string name="read_search_hint">Read Search Hint</string>
    <string name="hint">Due to limitations by application developers, the location search feature can only be searched using provincial keywords with lower front letters. Here is a list of location search keywords in this application
\n1. Aceh = aceh
\n2. Bali = bali
\n3. Bangka Belitung = babel
\n4. Banten = banten
\n5. Benkulu = bengkulu
\n6. Yogyakarta = jogyakarta
\n7. Jakarta = jakarta
\n8. Gorontalo = gorontalo
\n9. Jambi = jambi
\n10. Jawa Barat = jawabarat
\n11. Jawa Tengah = jawatengah
\n12. Jawa Timur = jawatimur
\n13. Kalimantan Barat = kalbar
\n14. Kalimantan Selatan = kalsel
\n15. Kalimantan Tengah = kalteng
\n16. Kalimantan Timur = kaltim
\n17. Kalimantan Utara = kaluta
\n18. Kepulauan Riau = kepriau
\n19. Lampung = lampung
\n20. Maluku = maluku
\n21. Maluku Utara = malut
\n22. Nusa Tenggara Barat = ntb
\n23. Nusa Tenggara Timur = ntt
\n24. Papua = papua
\n25. Papua Barat = papuabarat
\n26. Riau = riau
\n27. Sulawesi Barat = sulbar
\n28. Sulawesi Selatan = sulsel
\n29. Sulawesi Tengah = sulteng
\n30. Sulawesi Tenggara = sultenggara
\n31. Sulawesi Utara = sulut
\n32. Sumatera Barat = sumbar
\n33. Sumatera Selatan = sumsel
\n34. Sumatera Utara = sumut</string>
    <string name="notification">Notification</string>
    <string name="available_in_english_and_indonesian">Available in English and Indonesian</string>
</resources>