<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity">

    <TextView
        android:id="@+id/language_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/available_in_english_and_indonesian"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_location" />

    <Button
        android:id="@+id/btn_add_location"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="364dp"
        android:layout_height="53dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/choose_language"
        android:textSize="16sp"
        app:icon="@drawable/ic_baseline_language_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/dark_mode"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_location"
        app:layout_constraintStart_toStartOf="@+id/btn_add_location"
        app:layout_constraintTop_toBottomOf="@+id/language_available" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_notif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/notification"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/switch_theme"
        app:layout_constraintStart_toStartOf="@id/switch_theme"
        app:layout_constraintTop_toBottomOf="@+id/switch_theme" />

</androidx.constraintlayout.widget.ConstraintLayout>