<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_content_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />

    <TextView
        android:id="@+id/tv_kecamatan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_condensed_light"
        android:text="@string/kecamatan"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_kota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_light"
        android:text="@string/kota_kabupaten"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tv_kecamatan"
        app:layout_constraintTop_toBottomOf="@+id/tv_kecamatan" />

    <TextView
        android:id="@+id/tv_daydate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_date"
        android:fontFamily="@font/roboto_condensed_regular"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_kota"
        app:layout_constraintTop_toBottomOf="@+id/tv_kota" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tv_daydate"
        app:layout_constraintTop_toBottomOf="@+id/tv_kota" />

    <TextView
        android:id="@+id/today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/overpass"
        android:text="Today"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time" />

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/today"
        tools:src="@tools:sample/avatars"/>

    <LinearLayout
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/weather_icon"
        app:layout_constraintStart_toStartOf="@id/weather_icon"
        app:layout_constraintTop_toBottomOf="@id/weather_icon">

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="32"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="@+id/weather_icon"
            app:layout_constraintTop_toBottomOf="@id/weather_icon" />

        <TextView
            android:id="@+id/tv_temperature_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            android:layout_marginStart="4dp"
            android:text="O"
            android:textColor="@color/black"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@+id/tv_temperature"
            app:layout_constraintTop_toTopOf="@+id/tv_temperature" />

        <TextView
            android:id="@+id/tv_temperature_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="C"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_temperature_degree"
            app:layout_constraintTop_toTopOf="@+id/tv_temperature_degree" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        app:layout_constraintStart_toStartOf="@id/weather_icon"
        app:layout_constraintEnd_toEndOf="@id/weather_icon"
        app:layout_constraintTop_toBottomOf="@id/temperature">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/iv_wind_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/wind"/>

            <TextView
                android:id="@+id/tv_wind"
                android:text="@string/wind"
                style="@style/Main.Condition"/>

            <TextView
                android:id="@+id/tv_wind_value"
                android:text="11"
                style="@style/Main.Condition.Value"/>

            <TextView
                android:id="@+id/tv_wind_unit"
                android:text="@string/speed_unit"
                style="@style/Main.Condition"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/iv_direction_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/compass"/>

            <TextView
                android:id="@+id/tv_direction"
                android:text="@string/direction"
                style="@style/Main.Condition"/>

            <TextView
                android:id="@+id/tv_direction_value"
                android:text="South"
                style="@style/Main.Condition.Value"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/iv_humidity_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/humidity"/>

            <TextView
                android:id="@+id/tv_humidity"
                android:text="@string/humidity"
                style="@style/Main.Condition"/>

            <TextView
                android:id="@+id/tv_humidity_space"
                style="@style/Main.Condition.Value"/>

            <TextView
                android:id="@+id/tv_humidity_value"
                android:text="20"
                android:gravity="right"
                style="@style/Main.Condition"/>

            <TextView
                android:id="@+id/tv_humidity_unit"
                android:text="@string/humidity_unit"
                android:gravity="right"
                style="@style/Main.Condition"/>
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>