<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/tv_kecamatan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/kecamatan"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_kota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/kota_kabupaten"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tv_kecamatan"
        app:layout_constraintTop_toBottomOf="@+id/tv_kecamatan" />

    <TextView
        android:id="@+id/tv_daydate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_date"
        android:fontFamily="@font/roboto_condensed_light"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/tv_kota"
        app:layout_constraintTop_toBottomOf="@+id/tv_kota"/>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_light"
        android:text="@string/time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_daydate"
        app:layout_constraintTop_toBottomOf="@+id/tv_daydate" />

    <Button
        android:id="@+id/btn_add_location"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Location"
        android:textSize="8sp"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintStart_toStartOf="@+id/tv_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_time" />

    <TextView
        android:id="@+id/today_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/overpass"
        android:text="Weather"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_location" />

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/today_condition"
        tools:src="@tools:sample/avatars"/>

    <LinearLayout
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/weather_icon"
        app:layout_constraintStart_toStartOf="@id/weather_icon"
        app:layout_constraintTop_toBottomOf="@id/weather_icon">

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="X"
            android:textSize="32sp"
            app:layout_constraintStart_toStartOf="@+id/weather_icon"
            app:layout_constraintTop_toBottomOf="@id/weather_icon" />

        <TextView
            android:id="@+id/tv_temperature_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:layout_marginStart="4dp"
            android:text="O"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@+id/tv_temperature"
            app:layout_constraintTop_toTopOf="@+id/tv_temperature" />

        <TextView
            android:id="@+id/tv_temperature_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:text="C"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_temperature_degree"
            app:layout_constraintTop_toTopOf="@+id/tv_temperature_degree" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/weather_icon"
        app:layout_constraintStart_toStartOf="@id/weather_icon"
        app:layout_constraintTop_toBottomOf="@id/temperature">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/iv_wind_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/wind" />

            <TextView
                android:id="@+id/tv_wind"
                style="@style/Condition"
                android:text="@string/wind" />

            <TextView
                android:id="@+id/tv_wind_value"
                style="@style/Condition.Value"
                android:text="X" />

            <TextView
                android:id="@+id/tv_wind_unit"
                style="@style/Condition"
                android:text="@string/speed_unit" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/iv_direction_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/compass" />

            <TextView
                android:id="@+id/tv_direction"
                style="@style/Condition"
                android:text="@string/direction" />

            <TextView
                android:id="@+id/tv_direction_value"
                style="@style/Condition.Value"
                android:text="X" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/iv_humidity_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/humidity" />

            <TextView
                android:id="@+id/tv_humidity"
                style="@style/Condition"
                android:text="@string/humidity" />

            <TextView
                android:id="@+id/tv_humidity_space"
                style="@style/Condition.Value" />

            <TextView
                android:id="@+id/tv_humidity_value"
                style="@style/Condition"
                android:gravity="end"
                android:text="X" />

            <TextView
                android:id="@+id/tv_humidity_unit"
                style="@style/Condition"
                android:gravity="end"
                android:text="@string/humidity_unit" />
        </TableRow>
    </TableLayout>

<!--    <TextView-->
<!--        android:id="@+id/today"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:text="@string/today"-->
<!--        android:textSize="16sp"-->
<!--        app:layout_constraintStart_toStartOf="@+id/tv_kecamatan"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />-->

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/rv_today_condition"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="@+id/today"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/today" />-->

    <ProgressBar
        android:id="@+id/progress_bar_home"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/light_blue_600"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>